package(default_visibility = ["//visibility:public"])

cc_library(
    name = "net",
    srcs = ["net.cpp"],
    hdrs = ["net.hpp"],
    deps = [
        "@boost//:asio_ssl",
        "@boost//:beast",
        "@boost//:format",
        "@com_github_google_glog//:glog",
    ],
)

cc_library(
    name = "protocol",
    srcs = ["protocol.cpp"],
    hdrs = ["protocol.hpp"],
    deps = [
        "@com_github_tencent_rapidjson//:rapidjson",
    ],
)

cc_library(
    name = "client",
    srcs = ["client.cpp"],
    hdrs = ["client.hpp"],
    deps = [
        ":net",
        ":protocol",
    ],
)
